--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "marked": "^13.0.3",
     "puppeteer": "^22.15.0"
   }
 }
