--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "marked": "^13.0.3",
+    "path": "^0.12.7",
     "puppeteer": "^22.15.0"
   }
 }
